Se creó con Colab

--- a/Python_Data_Science.ipynb
+++ b/Python_Data_Science.ipynb
@@ -113,9 +113,32 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "print('Hola mi nombre es Edgardo')"
+      ],
+      "metadata": {
+        "id": "GLMzF_AKBY7a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8f0acb72-bf81-4da6-8c06-c914c16f5f21"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hola mi nombre es Edgardo\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "GLMzF_AKBY7a"
+        "id": "ro5mKrcS2OVe"
       },
       "execution_count": null,
       "outputs": []
@@ -155,27 +178,106 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "5"
+      ],
       "metadata": {
-        "id": "vsHh5buZADND"
+        "id": "vsHh5buZADND",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ec848691-cbe8-4bac-c0db-e50b8c545a15"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "id(5)"
+      ],
       "metadata": {
-        "id": "sivPtqSjADQV"
+        "id": "sivPtqSjADQV",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b1228a9a-fc55-4dad-9d39-2c5bc88793b2"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "10750984"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "edad = 5"
+      ],
       "metadata": {
         "id": "JC8jO47wADlm"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(id(edad))\n",
+        "print(id(5))"
+      ],
+      "metadata": {
+        "id": "yqZcMWu-33or",
+        "outputId": "d414335f-f754-4e86-8da1-36c4f1cfb901",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10750984\n",
+            "10750984\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "KbFyqEEo33-p"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Qf5S4Xmr34KN"
       },
       "execution_count": null,
       "outputs": []
@@ -229,18 +331,157 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "edad=5"
+      ],
       "metadata": {
         "id": "J5a9t73A_-PX"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(edad)"
+      ],
+      "metadata": {
+        "id": "rqmO1ew-_-So",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "de80005f-9e88-43e1-c2e4-fbe224857bcf"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "int"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "promedio = 9.5"
+      ],
+      "metadata": {
+        "id": "xkrPMkeY_-cP"
+      },
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(promedio)"
+      ],
+      "metadata": {
+        "id": "UE9YQ1tY5dSa",
+        "outputId": "e639b7b2-caa3-4083-c315-f9480858b91d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "float"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nombre = \"Edgardo\""
+      ],
+      "metadata": {
+        "id": "m4OJKa4g5joE"
+      },
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(nombre)"
+      ],
+      "metadata": {
+        "id": "AbKHfg875j0S",
+        "outputId": "eb036214-410c-45de-f0db-f2bf2d092307",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "str"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "v =True"
+      ],
+      "metadata": {
+        "id": "T8jcexZU5kAD"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(v)"
+      ],
+      "metadata": {
+        "id": "UkD5OMVo5kME",
+        "outputId": "f02af673-4472-4229-cd35-223757d4a71e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "bool"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "rqmO1ew-_-So"
+        "id": "-cKgrIu95wbi"
       },
       "execution_count": null,
       "outputs": []
@@ -249,7 +490,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "xkrPMkeY_-cP"
+        "id": "XjAXOCfS5wmO"
       },
       "execution_count": null,
       "outputs": []
@@ -272,12 +513,31 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "nombre_estudiante = 'penelope camacho'\n",
+        "edad_estudiante = 11\n",
+        "promedio_estudiante = 9.75\n",
+        "aprobado_estudiante = True\n",
+        "\n",
+        "print(nombre_estudiante, edad_estudiante, promedio_estudiante, aprobado_estudiante)\n"
+      ],
       "metadata": {
-        "id": "FabQ7jQf_8Xt"
+        "id": "FabQ7jQf_8Xt",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "fb3cc66f-f3f9-4125-e302-cf1f1a3b651a"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "penelope camacho 11 9.75 True\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -322,18 +582,108 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "c_vigilantes = 5\n",
+        "s_vigilantes = 300\n",
+        "\n",
+        "c_docentes = 16\n",
+        "s_docentes = 500\n",
+        "\n",
+        "c_coordinadores = 2\n",
+        "s_coordinadores = 600"
+      ],
       "metadata": {
         "id": "F_X-wxdm_5Ys"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "total_empleados = c_vigilantes + c_docentes + c_coordinadores\n",
+        "total_empleados"
+      ],
+      "metadata": {
+        "id": "gKmBbhII_5b9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "51b381ce-93f6-4ed7-9857-b62aa87eb67c"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "23"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "diferencia_salarios = s_vigilantes - s_coordinadores\n",
+        "diferencia_salarios"
+      ],
+      "metadata": {
+        "id": "fIugsxNy_53j",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "bdd8b540-2a50-459d-9db3-f61cdc269cce"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "-300"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "promedio_ponderado = (c_vigilantes * s_vigilantes + c_docentes * s_docentes + c_coordinadores * s_coordinadores) /  total_empleados\n",
+        "promedio_ponderado"
+      ],
+      "metadata": {
+        "id": "y8SuqJUT7IuU",
+        "outputId": "72a20878-1b8a-4a8c-a61b-dbb6ffc57977",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "465.2173913043478"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "gKmBbhII_5b9"
+        "id": "JRT_QMBw7I4M"
       },
       "execution_count": null,
       "outputs": []
@@ -342,7 +692,16 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "fIugsxNy_53j"
+        "id": "ztirBszP7JBV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "hjhq93m07JK3"
       },
       "execution_count": null,
       "outputs": []
